--- a/OnlineMarket/OnlineMarket.web/Areas/Admin/Views/Products/Edit.cshtml
+++ b/OnlineMarket/OnlineMarket.web/Areas/Admin/Views/Products/Edit.cshtml
@@ -46,7 +46,7 @@
                                    class="form-control" />
                         </div>
                         <div class="form-group">
-                            <label asp-for="Price">Price</label>
+                            <label asp-for="ImagePath">Image</label>
                             <img src="@Model.ImagePath" width="100" />
                         </div>
                         <div class="form-group">
